--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  url_launcher: ^6.0.9
+  intl: ^0.18.0
   sqflite: ^2.4.0
   cupertino_icons: ^1.0.8
 
