--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   intl: ^0.18.0
   sqflite: ^2.4.0
   cupertino_icons: ^1.0.8
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.10.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
