--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
+  http: ^1.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
